--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
+	<meta charset="utf-8"/>
 	<title>Inventory - Bushwick Food Coop</title>
-	<link href="styles/main.css" rel="stylesheet" type="text/css">
+	<link href="main.css" rel="stylesheet" type="text/css">
 	<link rel="shortcut icon" href="https://www.bushwickfoodcoop.org/favicon.ico">
 </head>
 <body>
@@ -14,7 +15,7 @@
 					</a>
 					<h1>Inventory</h1>
 				</div>
-				<input type="text" id="searchfield" onkeyup="search()" placeholder="Search for products...">
+				<input type="text" id="searchfield" placeholder="Search for products...">
 			</div>
 		</left>
 		<right>
