--- a/inventory.html
+++ b/inventory.html
@@ -2,6 +2,16 @@
 <head>
 <title>Inventory - Bushwick Food Coop</title>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115168270-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-115168270-1');
+</script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link href="inventory.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="https://www.bushwickfoodcoop.org/favicon.ico">
