--- a/inventory.html
+++ b/inventory.html
@@ -32,7 +32,6 @@
 			</itemheader>
 		</hidden>
 	</main>
-
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115168270-1"></script>
 	<script>
@@ -43,6 +42,6 @@
 	</script>
 	</script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="scripts/main.js"></script>
+	<script src="inventory.js"></script>
 </body>
 </html>
