Fixed typo and spacing issue noted by @verakern, renamed main.css -> inventory.css to match what's currently on the server

--- a/inventory.html
+++ b/inventory.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Inventory - Bushwick Food Coop</title>
-	<link href="main.css" rel="stylesheet" type="text/css">
+	<link href="inventory.css" rel="stylesheet" type="text/css">
 	<link rel="shortcut icon" href="https://www.bushwickfoodcoop.org/favicon.ico">
 </head>
 <body>
