Add stock to inventory

--- a/inventory.html
+++ b/inventory.html
@@ -26,6 +26,7 @@
 			<itemheader>
 				<itemrow>
 					<itemname></itemname>
+					<span class="stock">Stock</span>
 					<itemprice class="p1">Members</itemprice>
 					<itemprice class="p2">Non-members</itemprice>
 				</itemrow>
