--- a/inventory.html
+++ b/inventory.html
@@ -26,8 +26,8 @@
 			<itemheader>
 				<itemrow>
 					<itemname></itemname>
-					<itemprice class="p1">Members</itemprice>
-					<itemprice class="p2">Non-members</itemprice>
+					<itemprice class="p1">Owner</itemprice>
+					<itemprice class="p2">Non-owner</itemprice>
 				</itemrow>
 			</itemheader>
 		</hidden>
